# InformaticaUA-Archive

./: .gitignore  README.md
Computer Graphics/: CMakeLists.txt  Draw3DLines.cpp  Draw3DLines.h  General.cpp  General.h  Intro.cpp  Intro.h  LSystems2D.cpp  LSystems2D.h  README.md  engine.cc  test.ini
Computer Graphics/ini/0intro/: Intro3_lines_diamond_test.ini  filelist
Computer Graphics/ini/1lsystems2D/: filelist  stocastitest1.L2D  stocastitest1.ini  stocastitest2.L2D  stocastitest2.ini  stocastitest3.L2D  stocastitest3.ini  stocastitest4.L2D  stocastitest4.ini  tree.L2D
Computer Graphics/ini/2line_drawings/: filelist  teapot.ini
Computer Graphics/ini/Not working/bonus_ambient_clipping/: ambient_light_clipping001.ini  ambient_light_clipping002.ini  ambient_light_clipping003.ini  ambient_light_clipping004.ini  ambient_light_clipping005.ini  ambient_light_clipping006.ini  ambient_light_clipping007.ini  ambient_light_clipping008.ini  ambient_light_clipping009.ini  ambient_light_clipping010.ini  ambient_light_clipping011.ini  ambient_light_clipping012.ini  ambient_light_clipping013.ini  ambient_light_clipping014.ini  ambient_light_clipping015.ini  ambient_light_clipping016.ini  ambient_light_clipping017.ini  ambient_light_clipping018.ini  ambient_light_clipping019.ini  ambient_light_clipping020.ini  ambient_light_clipping021.ini  ambient_light_clipping022.ini  ambient_light_clipping023.ini  ambient_light_clipping024.ini  ambient_light_clipping025.ini  ambient_light_clipping026.ini  ambient_light_clipping027.ini  ambient_light_clipping028.ini  ambient_light_clipping029.ini  ambient_light_clipping030.ini  ambient_light_clipping031.ini  ambient_light_clipping032.ini  ambient_light_clipping033.ini  ambient_light_clipping034.ini  ambient_light_clipping035.ini  ambient_light_clipping036.ini  ambient_light_clipping037.ini  ambient_light_clipping038.ini  ambient_light_clipping039.ini  ambient_light_clipping040.ini  (+95 more)
Computer Graphics/ini/Not working/bonus_diffuse_clipping/: diffuse_light_clipping001.ini  diffuse_light_clipping002.ini  diffuse_light_clipping003.ini  diffuse_light_clipping004.ini  diffuse_light_clipping005.ini  diffuse_light_clipping006.ini  diffuse_light_clipping007.ini  diffuse_light_clipping008.ini  diffuse_light_clipping009.ini  diffuse_light_clipping010.ini  diffuse_light_clipping011.ini  diffuse_light_clipping012.ini  diffuse_light_clipping013.ini  diffuse_light_clipping014.ini  diffuse_light_clipping015.ini  diffuse_light_clipping016.ini  diffuse_light_clipping017.ini  diffuse_light_clipping018.ini  diffuse_light_clipping019.ini  diffuse_light_clipping020.ini  diffuse_light_clipping021.ini  diffuse_light_clipping022.ini  diffuse_light_clipping023.ini  diffuse_light_clipping024.ini  diffuse_light_clipping025.ini  diffuse_light_clipping026.ini  diffuse_light_clipping027.ini  diffuse_light_clipping028.ini  diffuse_light_clipping029.ini  diffuse_light_clipping030.ini  diffuse_light_clipping031.ini  diffuse_light_clipping032.ini  diffuse_light_clipping033.ini  diffuse_light_clipping034.ini  diffuse_light_clipping035.ini  diffuse_light_clipping036.ini  diffuse_light_clipping037.ini  diffuse_light_clipping038.ini  diffuse_light_clipping039.ini  diffuse_light_clipping040.ini  (+757 more)
Computer Graphics/ini/Not working/bonus_shadowing_clipping/: filelist  shadowing_clipping001.ini  shadowing_clipping002.ini  shadowing_clipping003.ini  shadowing_clipping004.ini  shadowing_clipping005.ini  shadowing_clipping006.ini  shadowing_clipping007.ini  shadowing_clipping008.ini  shadowing_clipping010.ini  shadowing_clipping011.ini  shadowing_clipping012.ini  shadowing_clipping014.ini  shadowing_clipping015.ini  shadowing_clipping016.ini  shadowing_clipping017.ini  shadowing_clipping018.ini  shadowing_clipping019.ini  shadowing_clipping020.ini  (+226 more)
DW/: README.md
IP/CLionProjects/W12Vrij/: Assistent.h  CMakeLists.txt  Persoon.h  Professor.h  main.cpp  zipper.sh
IP/CLionProjects/W12Woe/: CMakeLists.txt  DenDerde.h  DenTweede.cpp  EnDeVierde.h  Queue.cpp  Queue.h  main.cpp
IP/CLionProjects/W13Woe/: CMakeLists.txt  Character.h  DungeonRoom.h  HeroCharacter.cpp  HeroCharacter.h  Item.cpp  Level.cpp  Level.h  MonsterCharacter.h  PotionItem.cpp  Room.cpp  Room.h  TerrainRoom.cpp  World.h
Inleiding Programmeren/CLionProjects/W13Vrij/: CMakeLists.txt
Project Software Engineering/PSEg-Traffic-Simulator/: .gitignore  CMakeLists.txt  DesignByContract.h  ErrorMessages.h  README.md  Tijdsschema.xlsx  main.cpp  mainTests.cpp
Project Software Engineering/PSEg-Traffic-Simulator/build-script/: build.sh  gtest-1.7.0-to-recompile-if-needed.tar.xz
Project Software Engineering/PSEg-Traffic-Simulator/classes/: Intersection.cpp  Intersection.h  Road.cpp  Road.h  Simulation.cpp  Simulation.h  Stop.cpp  Stop.h  Vehicle.cpp  Vehicle.h  VehicleGenerator.cpp  VehicleGenerator.h
Project Software Engineering/PSEg-Traffic-Simulator/doxygen/: Doxyfile
Project Software Engineering/PSEg-Traffic-Simulator/xml-files/: basic.xml  faultySmartTrafficLight.xml  happyday1road.xml  invalidArgumentForContext.xml  invalidType.xml  main.xml  missingParameters.xml  missingValues.xml  mustBePositive.xml  onlyOneAllowed.xml  testEdgeCases.xml  testInvalidVehicles.xml  testMultipleErrors.xml
Talen en Automaten/TOg/: .gitignore  CMakeLists.txt  Languages.cpp  Languages.h  README.md  TokenMatcher.cpp  TokenMatcher.h  genlang.cpp  main.cpp
Talen en Automaten/TOg/Adriaan/: ENFA.cpp  ENFA.h  RE.cpp  RE.h
Talen en Automaten/TOg/Documenten/: TA Conferentie Presentatie.pptx
Talen en Automaten/TOg/Gui/: Application.cpp  Application.h  MainGui.cpp  MainGui.h
Talen en Automaten/TOg/Norkella/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  General.cpp  General.h  RE.cpp  RE.h
Talen en Automaten/TOg/languages/: C++.json  HTML.json  Korean.json  Python.json  Toki Pona.json
Talen en Automaten/TOg/scripts/: C++.script  Dutch.script  English.script  Finnish.script  French.script  German.script  HTML.script  Korean.script  Norwegian.script  Polish.script  Portuguese.script  Python.script  Spanish.script  Toki Pona.script  Ukrainian.script
(+1144 files in other folders)
