cmake_minimum_required(VERSION 3.30)
project(W12Woe)

set(CMAKE_CXX_STANDARD 11)

add_executable(W12Woe main.cpp
        ArrayList.cpp
        ArrayList.h
        Stack.cpp
        Stack.h
        Queue.cpp
        Queue.h
        DenTweede.cpp
        DenTweede.h
        DenDerde.cpp
        DenDerde.h
        EnDeVierde.cpp
        EnDeVierde.h)
